--- a/deploy/crds/sawtooth.hyperledger.org_sawtooths_crd.yaml
+++ b/deploy/crds/sawtooth.hyperledger.org_sawtooths_crd.yaml
@@ -30,6 +30,18 @@ spec:
           type: object
         spec:
           description: SawtoothSpec defines the desired state of Sawtooth
+          properties:
+            consensus:
+              type: string
+            nodes:
+              format: int64
+              type: integer
+            version:
+              type: string
+          required:
+          - consensus
+          - nodes
+          - version
           type: object
         status:
           description: SawtoothStatus defines the observed state of Sawtooth
